tests/integration/tests/macros/ui/http_error/fail/missing_status.rs
use reinhardt::HttpError;

#[derive(Debug, HttpError)]
enum ApiError {
	#[http_error(message = "Invalid request")]
	Invalid,
}

fn main() {}
